objects/CommandCenter__Log_Failures__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Detailed_Error_Message__c</fullName>
        <label>Detailed Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Error_Field__c</fullName>
        <label>Error Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Error_Object__c</fullName>
        <label>Error Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Failure_Record__c</fullName>
        <label>Failure Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Failure</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <columns>NAME</columns>
        <columns>CommandCenter__Failure_Record__c</columns>
        <columns>CommandCenter__Type__c</columns>
        <columns>CommandCenter__Error_Field__c</columns>
        <columns>CommandCenter__Error_Message__c</columns>
        <columns>CommandCenter__Status_Code__c</columns>
        <columns>CommandCenter__Error_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CommandCenter__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Failure Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>